--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,10 @@
 
 Bienvenue sur la page du cours de Statistiques Fondamentales (STF8) du master Mathématiques Fondamentales et Appliquées de l'Université Paris-Cité. 
 
+
 Les notes de cours sont accessibles à tous. De nombreux auteurs s'y sont succédés ; je suis le dernier en date, mais les versions précédentes ont été travaillées par Clément Levrard, Stéphane Boucheron, Stéphane Gaïffas, Pierre Youssef. 
+
+![](/images/logoUP.png){width=100}
 
 ## Organisation {.unnumbered}
 
