--- a/ch2.qmd
+++ b/ch2.qmd
@@ -95,6 +95,39 @@ $$ \sqrt{n}(g(X_n) - g(\alpha)) \xrightarrow[n \to \infty]{\text{loi}} N(0, g'(\
 
 :::
 
-Plus généralement, si les $X_n$ sont à valeurs dans $\mathbb{R}^d$ et que $\sqrt{n}(X_n - \alpha) \to N(0,\Sigma)$, alors pour toute fonction $g:\mathbb{R}^d \to \mathbb{R}^k$ on a 
-$$ \sqrt{n}(g(X_n) - g(\alpha)) \xrightarrow[n \to \infty]{\text{loi}} N(0, Dg(\alpha)\Sigma Dg(\alpha)^\top)$$
-où $Dg(x)$ est la matrice jacobienne de $g$ en $x$. 
+Plus généralement, si les $X_n$ sont à valeurs dans $\mathbb{R}^d$ et que $\sqrt{n}(X_n - \alpha) \to N(0,\Sigma)$, alors pour toute fonction $g:\mathbb{R}^d \to \mathbb{R}^k$, la suite $ \sqrt{n}(g(X_n) - g(\alpha)) $ converge en loi vers $$ N(0, Dg(\alpha)\Sigma Dg(\alpha)^\top)$$
+où $Dg(x)$ est la [matrice jacobienne](https://fr.wikipedia.org/wiki/Matrice_jacobienne) de $g$ en $x$. 
+
+## La méthode des moments
+
+Dans un modèle statistique, supposons qu'on dispose d'une statistiques intégrable $T$ (pas forcément réelle). Supposons que sa moyenne soit, non pas le paramètre $\theta$ lui-même, mais plutôt une *fonction* de $\theta$ :  
+$$\mathbb{E}_\theta[T(X)] = \varphi(\theta).$$ 
+C'est cette fonction $\varphi$ qu'on appelle \emph{moment}. Typiquement, 
+- la moyenne d'une loi $\mathscr{E}(\theta)$ n'est pas $\theta$ mais $1/\theta$. 
+- la moyenne d'une loi log-normale de paramètres $(0, \sigma^2)$ est $e^{\sigma^2/2}$. 
+
+Alors, par la loi des grands nombres, 
+$$\bar{T}_n = \frac{1}{n}\sum_{i=1}^n T(X_i) \to \varphi(\theta), $$
+ce qui permet d'estimer $\varphi(\theta)$. Peut-on alors estimer $\theta$ ? Si la fonction $\varphi$ est inversible et si $\bar{T}_n$ appartient presque sûrement à son ensemble de définition, alors $\varphi^{-1}(\bar{T_n})$ est bien définie. Pour qu'en plus cette quantité converge presque sûrement vers $\theta$, il faut s'assurer que $\varphi^{-1}$ est continue. C'est par exemple le cas lorsque l'ensemble des paramètres $\Theta$ est un ouvert, et que $\varphi$ est un difféomorphisme sur son image --- une situation si fréquente qu'elle mérite son propre théorème, et si agréable qu'elle garantit que l'esimateur est asymptotiquement normal. 
+
+:::{#thm-mom}
+
+## Estimation par moments
+
+Sous l'hypothèse mentionnée ci-dessus (la fonction $\varphi$ est un difféomorphisme), l'estimateur $$\hat{\theta}_n = \varphi^{-1}(\bar{T}_n)$$ est presque sûrement bien défini pour tout $n$ suffisamment grand ; il est également consistant pour l'estimation de $\theta$. En outre, si $T$ est de carré intégrable, cet estimateur est asymptotiquement normal, au sens où $\sqrt{n}(\hat{\theta}_n - \theta)$ converge en loi vers une gaussienne centrée de matrice de covariance
+$$ (D\varphi(\theta))^{-1}\mathrm{Cov}_\theta(T)(D\varphi(\theta)^\top)^{-1}.$$
+
+:::
+
+:::{.proof}
+La première partie a essentiellement été démontrée un peu plus haut. Pour la seconde, il faut d'abord remarquer que si $T$ est de carré intégrable, alors $\sqrt{n}(\bar{T}_n - \varphi(\theta))$ converge vers une loi $N(0, \mathrm{Cov}_\theta(T))$ par le TCL. Une simple application de la delta-méthode (@thm-deltamethod) donne alors le résultat, puisque la matrice jacobienne de $\varphi^{-1}$ en $\varphi(\theta)$ n'est autre que l'inverse de la matrice jacobienne de $\varphi$ en $\theta$. 
+
+:::
+
+:::{#exr-yule}
+
+## loi de Yule-Simon
+
+
+Une variable aléatoire $X$ suit la loi de Yule-Simon de paramètre $\rho>0$ lorsque $\mathbb{P}(X = n) = \rho B(n, 1+\rho)$, où $n\geqslant 1$ et  $B(a,b) = \int_0^1 u^{a-1}(1-u)^{b-1}du$ est la [fonction beta](https://en.wikipedia.org/wiki/Beta_function). Montrer que si $\rho>1$, alors $\mathbb{E}[X] = \rho/(\rho-1)$, puis trouver un estimateur de $\rho$ par la méthode des moments. 
+:::
