--- a/ch1.qmd
+++ b/ch1.qmd
@@ -1,24 +1,32 @@
 # Introduction
 
+Les outils des statistiques furent créés pour analyser des phénomènes quantitatifs dans lesquels la présence de *bruit* ou de *hasard* rendait l'analyse classique moins opérante. Il peut typiquement s'agir de problèmes dans lesquels de nombreuses données indépendantes ont été générées par le même phénomène. Dans cette section, nous allons développer un exemple pour bien comprendre les questions qui se posent et la façon de les résoudre, puis nous poserons quelques bases qui nous permettront d'utiliser le langage des mathématiques. 
 
 
-## Un modèle-jouet
+## Un exemple pour fixer les idées
 
-On observe donc $x_1, \dotsc, x_n$ (avec $n=100$). Comment avoir une idée de la véritable valeur de $\mu$ ? Évidemment, la moyenne empirique 
+
+Une grande enseigne de distribution possède $n=100$ magasins identiques, qui génèrent chaque année un chiffre d'affaire annuel (CA, en millions d'euros). Ce chiffre oscille autour d'une valeur de référence $\mu$. Cette valeur n'est pas observée ; ce qui est observé, ce sont tous les chiffres d'affaires des $n$ magasins, qui fluctuent tous autour de la vraie valeur $\mu$. Ces fluctuations proviennent de nombreuses sources : erreurs comptables, perturbations des ventes dues aux fournisseurs ou aux prix, etc. Ce qu'on observe, c'est donc des chiffres $x_1, \dotsc, x_n$ qui ne sont pas tous égaux ; comment avoir une idée de la véritable valeur de $\mu$ ? 
+
+**Estimation.** Évidemment, la moyenne empirique 
 $$\bar x_n = \frac{x_1+\dotsb + x_n}{n}$$
-vient naturellement à l'esprit. On trouve $\bar{x}_n \approx 21,6$. Cette valeur est une *estimation* de $\mu$. On pourrait se demander à quel point cette estimation est précise ou, disons, essayer de quantifier l'erreur possible qu'on fait si l'on dit que $\mu$ est égal à 21,6. 
+vient naturellement à l'esprit. En faisant le calcul, on trouve $\bar{x}_n \approx 21,6$. Cette valeur est une *estimation* du CA moyen $\mu$. Ce chiffre peut être utilisé par l'enseigne, par exemple pour jauger la rentabilité d'un possible plan d'ouverture de nouveaux magasins. 
 
-Comme on a supposé que les $x_i$ sont des réalisations d'une loi gaussienne $N(\mu, 1)$, alors on sait que $\bar{x}_n$ est la réalisation d'une loi $N(\mu, 1/n)$, ou encore que $\bar{x}_n - \mu$ est la réalisation d'une gaussienne centrée de variance $1/n$. Les lois gaussiennes sont bien connues ; par exemple, avec probabilité supérieure à 99%, une gaussienne $N(0, \sigma^2)$ est comprise entre les valeurs $-2,96\sigma$ et $2,96\sigma$. Autrement dit, il y a 99% de chances pour que le nombre $|\bar{x}-\mu|$, qui représente l'erreur d'estimation, soit plus petite que $2,96/\sqrt{n} = 2,96/10 \approx 0,3$. 
+**Précision**. On pourrait se demander à quel point cette estimation est précise ou, disons, essayer de quantifier l'erreur possible qu'on fait si l'on dit que $\mu$ est égal à 21,6 millions d'euros. Cela nécessite de faire quelques hypothèses sur le hasard qui génère les fluctuations des $x_i$ autour de $\mu$. Ces fluctuations observées au cours de l'année proviennent de l'agrégation de toutes les fluctuations quotidiennes, lesquelles sont à peu près indépendantes, et pour cette raison on peut supposer (pour commencer) que ces fluctuations sont gaussiennes et ont à peu près la même variance, disons $\sigma^2=1$.  Comme on a supposé que les $x_i$ sont des réalisations d'une loi gaussienne $N(\mu, 1)$, alors on sait que $\bar{x}_n$ est la réalisation d'une loi $N(\mu, 1/n)$, ou encore que $\bar{x}_n - \mu$ est la réalisation d'une gaussienne centrée de variance $1/n$. Les lois gaussiennes sont bien connues ; par exemple, avec probabilité supérieure à 99%, une gaussienne $N(0, \sigma^2)$ est comprise entre les valeurs $-2,96\sigma$ et $2,96\sigma$. Autrement dit, il y a 99% de chances pour que le nombre $|\bar{x}-\mu|$, qui représente l'erreur d'estimation, soit plus petite que $2,96/\sqrt{n} = 2,96/10 \approx 0,3$. 
 
-Ce dernier raisonnement peut être vu d'une autre façon. Dire que $\bar{x}_n$ et $\mu$ ne diffèrent pas de plus de $0,3$, c'est équivalent à dire que $\mu$ appartient à l'intervalle $[\bar{x} - 0,3, \bar{x} +0,3]$. En d'autres termes, avec une probabilité supérieure à 99%, le vrai paramètre $\mu$ se situe entre $21,3$ et $21,9$. Cela laisse tout de même une chance de 1% que le paramètre $\mu$ ne soit pas dans cette région. 
+Ce dernier raisonnement peut être vu d'une autre façon. Dire que $\bar{x}_n$ et $\mu$ ne diffèrent pas de plus de $0,3$, c'est équivalent à dire que $\mu$ appartient à l'intervalle $[\bar{x} - 0,3, \bar{x} +0,3]$. En d'autres termes, avec une probabilité supérieure à 99%, le vrai CA $\mu$ de chaque magasin se situe entre $21,3$ et $21,9$. Cela laisse tout de même une chance de 1% que le paramètre $\mu$ ne soit pas dans cette région. 
 
-Il existe encore un autre point de vue sur ce problème. Dans ce problème, nous ne sommes pas forcément intéressés par la valeur exacte de $\mu$. Ce qui nous intéresse, c'est plutôt d'être sûrs que le prix de l'actif est inférieur à un certain seuil (de rentabilité, par exemple). Typiquement, si j'ai un budget de 22€ et que mon estimation donne $\bar{x} = 21,4$, je suis a priori rassuré ; mais avec quel niveau de certitude ? Le raisonnement ci-dessus implique que, compte tenu de ce que j'ai observé et si mon hypothèse (les $x_i$ sont gaussiennes) est vraie, alors j'ai moins de 1% de me tromper si j'affirme que $\mu$ est inférieur à 22. 
+**Tests**. Il existe encore un autre point de vue sur ce problème. Par exemple, le conseil d'administration de la firme veut s'assurer que le dirigeant a bien tenu sa promesse selon laquelle le CA de chaque magasin était supérieur à 21 millions d'euros. La valeur exacte de $\mu$ n'est pas le plus important : ce qui nous intéresse maintenant, c'est plutôt d'être sûrs que $\mu$ n'est pas inférieur au seuil de 21. Le dirigeant, fin statisticien, effectue alors un raisonnement par l'absurde *en probabilité*. Supposons que le CA $\mu$ soit effectivement égal à 21 (ou même, inférieur). Alors, par les mêmes calculs que ci-dessus, cela voudrait dire qu'avec 99% de chances, $\bar{x}_n$ et $21$ ne devraient pas différer de plus de $0,3$ ; autrement dit, que $\bar{x}_n$ devrait se situer entre $20,7$ et $21,3$. Ce n'est pas le cas, puisque $\bar{x}_n = 21,6$. Si $\mu$ est réellement plus petit que 21, alors ce qu'on a observé est extrêmement peu probable. Par contraposée probabiliste, il est raisonnable de rejeter l'hypothèse selon laquelle $\mu$ est inférieur à 21. 
 
-Supposons maintenant qu'un autre produit attire mon attention. Je dispose de moins d'observations, disons seulement $y_1, \dotsc, y_m$ avec $m=36$. On peut encore raisonnablement supposer que les $y_i$ sont des réalisations de lois gaussiennes $N(\nu, 1)$. Mon estimation de $\nu$ donne $\bar{y}  = 21,5$. Le prix de ce bien Y semble donc inférieur au prix du bien X. Mais est-ce vraiment sûr ? Par le même raisonnement que celui ci-dessus, je peux dire qu'il y a 99% de chances pour que $\nu$ et $\bar{y}$ ne diffèrent pas de plus de $2,96/\sqrt{m} \approx 3/6 = 0,5$, et donc que $\nu$ soit quelque part entre $21$ et $22$. L'arbitrage entre $\mu$ et $\nu$ n'est pas évident ! 
+---
 
-<!-- On peut donc s'essayer à un petit raisonnement par l'absurde. Supposons un moment que ces deux prix soient identiques, c'est-à-dire que $\mu=\nu$. Si c'était le cas, alors $\bar{x}-\bar{y}$ devrait être une réalisation d'une loi $N(0, s^2$) où $s^2 = 1/n+1/m \approx 0,038$. Ainsi, $\bar{x} - \bar{y}$ aurait eu 99% de chances de se trouver entre les valeurs $\pm 2,96 s = \pm 0,57$.  -->
+Les trois points de vue donnés ci-dessus sont en quelque sorte les piliers de l'analyse statistique. L'estimation consiste à deviner une valeur cachée dans du bruit ; les intervalles de confiance consistent à donner une région dans laquelle se trouve cette valeur ; les tests d'hypothèse permettent de raisonner de façon logique sur cette valeur. 
 
-L'objectif du cours de statistiques de quantifier l'incertitude. Comme dans les exemples donnés ci-dessus, c'est un ensemble de méthodes scientifiques qui s'appuient sur la théorie des probabilités ; dans ce cours, on fera des hypothèses sur le hasard qui est en jeu, et on en tirera des conséquences *probables*. Ce qui différencie la statistique mathématique des affirmations de votre tante Lise sur l'inflation, c'est que la statistique a pour objectif de quantifier les niveaux d'incertitude des énoncés que nous faisons. 
+:::{.deep}
+
+L'objectif du cours de statistiques de quantifier l'incertitude liée au hasard dans chacun de ces objectifs. Comme dans les exemples donnés ci-dessus, c'est un ensemble de méthodes scientifiques qui s'appuient sur la théorie des probabilités ; dans ce cours, on fera des *hypothèses* sur le hasard qui est en jeu, et on en tirera des conséquences *probables* sur le modèle sous-jacent. En théorie des probabilités, le jeu est plutôt inverse : partant d'un modèle probabiliste fixé, on essaie de déterminer quel sera le comportement des réalisations de ce modèle. Il semble difficile de faire l'un sans l'autre. 
+:::
+
 
 ## Qu'est-ce qu'un problème statistique ?
 
@@ -34,11 +42,13 @@ Formellement, choisir un modèle statistique revient à choisir trois choses : 
 
 - $\mathcal{X}$, l'espace dans lequel vit notre échantillon ; 
 - $\mathscr{F}$, une tribu sur $\mathcal{X}$, pour donner du sens à ce qui est observable ou non ; 
-- $(P_\theta)_{\theta \in \Theta}$, une famille de mesures de probabilités sur $\mathcal{X}$ indexée par $\theta \in \Theta$, où $\Theta$ est appelé espace des paramètres.  
+- $(P_\theta)_{\theta \in \Theta}$, une famille de mesures de probabilités sur $\mathcal{X}$ indexée par $\theta \in \Theta$, où $\Theta$ est appelé espace des paramètres. On écrira fréquemment $\mathbb{E}_\theta$ ou $\mathrm{Var}_\theta$ pour désigner des espérances, variances, etc., calculées avec la loi $P_\theta$. 
 
 :::
 
-En pratique, dans ce cours, on aura toujours un échantillon $(x_1, \dotsc, x_n)$ où les $x_i$ vivent dans un même espace, disons $\mathbb{R}^d$ pour simplifier. On devrait donc écrire $\mathcal{X} = \mathbb{R}^{d\times n}$ ; et l'on fera toujours l'hypothèse que ces observations sont indépendantes les unes des autres, et que ces observations ont la même loi de probabilité. Autrement dit, on se donnera toujours une mesure $\mu_\theta$ sur $\mathbb{R}^d$ et on supposera que la loi de notre échantillon est $P_\theta = \mu_\theta^{\otimes n}$. Dans ce cadre, les observations $x_i$ sont des *réalisations* de variables aléatoires iid de loi $\mu_\theta$. 
+En pratique, dans ce cours, on aura toujours un échantillon $(x_1, \dotsc, x_n)$ où les $x_i$ vivent dans un même espace, disons $\mathbb{R}^d$ pour simplifier. On devrait donc écrire $\mathcal{X} = \mathbb{R}^{d\times n}$ ; et l'on fera toujours l'hypothèse que ces observations sont indépendantes les unes des autres, et que ces observations ont la même loi de probabilité. Autrement dit, on se donnera toujours une mesure $p_\theta$ sur $\mathbb{R}^d$ et on supposera que la loi de notre échantillon est $P_\theta = p_\theta^{\otimes n}$. Dans ce cadre, les observations $x_i$ sont des *réalisations* de variables aléatoires $X_i$ iid de loi $p_\theta$. 
+
+Il faut prendre garde à distinguer les variables aléatoires $X_i$, qui sont des objets théoriques, de leurs réalisations $x_i$, qui, elles, sont bel et bien observées. 
 
 
 ::: {#def-identifiable}
@@ -48,14 +58,14 @@ On dit qu'un modèle statistique est identifiable si $\theta \neq \theta'$ entra
 :::
 
 
-Si l'on a bien choisi notre modèle statistique, alors il existe un « vrai » paramètre, disons $\theta_\star$, tel que les observations $x_1, \dotsc, x_n$ sont des réalisations de loi $\mu_{\theta_\star}$. L'objectif est alors de trouver $\theta_\star$ ou quelque information que ce soit le concernant. 
+Si l'on a bien choisi notre modèle statistique, alors il existe un « vrai » paramètre, disons $\theta_\star$, tel que les observations $x_1, \dotsc, x_n$ sont des réalisations de loi $p_{\theta_\star}$. L'objectif est alors de trouver $\theta_\star$ ou quelque information que ce soit le concernant. 
 
 
 
   
 
 
-Dans un modèle (identifiable), la statistique inférentielle (classique) permet de faire trois choses:
+Dans un modèle identifiable, la statistique inférentielle (classique) permet de faire trois choses :
 
 - Trouver une valeur approchée du vrai paramètre $\theta_\star$ (estimation ponctuelle).
 - Donner une zone de $\Theta$ dans laquelle le vrai paramètre $\theta_\star$ a des chances de se trouver (intervalle de confiance).
@@ -74,12 +84,13 @@ Une *statistique* est une fonction mesurable des observations. Plus formellement
 ::: 
 
 
-Le point important est qu'une statistique ne peut pas prendre $\theta$ en argument. Ses valeurs ne doivent dépendre du paramètre $\theta$ qu'au travers de $P_\theta$. 
+1) Le premier point important est qu'une statistique ne peut pas prendre $\theta$ en argument. Ses valeurs ne doivent dépendre du paramètre $\theta$ qu'au travers de $P_\theta$. 
 
-
-Si $X$ est une variable aléatoire et $T$ une statistique, alors $T(X)$ est une variable aléatoire. On peut donc définir des quantités théoriques liées à $T$: typiquement, si $X$ a pour loi $P_\theta$, on peut définir la valeur moyenne de $T$ sous le modèle $P_\theta$ comme 
+2) Le second point important est que, si $X$ est une variable aléatoire et $T$ une statistique, alors $T(X)$ est une variable aléatoire. On peut donc définir des quantités théoriques liées à $T$: typiquement, si $X$ a pour loi $P_\theta$, on peut définir la valeur moyenne de $T$ sous le modèle $P_\theta$ comme 
 $$\mathbb{E}_\theta[T(X)] = \int_{\mathcal{X}} T(x) P_\theta(dx)$$
-ou encore sa variance $\mathbb{E}_\theta[\mathsf{t}(X)^2] - (\mathbb{E}_\theta[\mathsf{t}(X)])^2$, etc. On peut aussi calculer la valeur de cette statistique sur l'échantillon dont on dispose, c'est-à-dire $\mathsf{t}(x_1, \dotsc, x_n)$. Ce qui ne se voit pas dans la définition, c'est qu'une bonne statistique devrait être facilement calculable ; à la place de *statistique*, on peut penser à *algorithme* : une bonne statistique doit pouvoir être calculée facilement par un algorithme ne prenant en entrée que les échantillons $x_i$. 
+ou encore sa variance $\mathbb{E}_\theta[T(X)^2] - (\mathbb{E}_\theta[T(X)])^2$, etc. On peut aussi calculer la valeur de cette statistique sur l'échantillon dont on dispose, c'est-à-dire $T(x_1, \dotsc, x_n)$. Par exemple, la moyenne empirique d'un $n$-échantillon réel est la fonction $T : (a_1, \dots, a_n) \to n^{-1}(a_1+\dotsb + a_n)$. Si les $x_i$ sont des réalisations des variables aléatoires $X_i$, alors $T(x_1, \dotsc, x_n)$ est une réalisation de la variable aléatoire $T(X_1, \dotsc, X_n)$. 
+
+3) Ce qui ne se voit pas dans la définition, c'est qu'une bonne statistique devrait être facilement calculable ; à la place de *statistique*, on peut penser à *algorithme* : une bonne statistique doit pouvoir être calculée facilement par un algorithme ne prenant en entrée que les échantillons $x_i$. 
 
 
 
@@ -89,12 +100,15 @@ Si le but est de deviner la valeur de $\theta$ à partir des observations, il es
 Dans le modèle $(\mathcal{X},\mathcal{A}, (P_\theta)_{\theta \in \Theta})$, un estimateur de $\theta$ est une statistique à valeurs dans $\Theta$.
 :::
 
-En fait, on n'est pas obligés de vouloir estimer précisément $\theta$. Peut-être qu'on veut estimer quelque chose qui dépend de $\theta$, mais qui n'est pas $\theta$ ; disons, une fonction $q(\theta)$. Dans ce cas, un estimateur de $q(\theta)$ sera simplement une statistique à valeurs dans l'espace où vit $q(\theta)$. 
+En fait, on n'est pas obligés de vouloir estimer précisément $\theta$. Peut-être qu'on veut estimer quelque chose qui dépend de $\theta$, mais qui n'est pas $\theta$ ; disons, une fonction $\varphi(\theta)$. Dans ce cas, un estimateur de $\varphi(\theta)$ sera simplement une statistique à valeurs dans l'espace où vit $\varphi(\theta)$. 
 
 
 
-## Non-paramétrique
+## Points de vue
 
-Traditionnellement, on  distingue deux grands types de modèles : on dit qu'un modèle est *paramétrique* lorsque le paramètre $\theta$ vit dans un espace de dimension finie (autrement dit quand $\Theta$ est une partie de $\mathbb{R}^d$), et sinon on dit que le modèle est non-paramétrique. On verra quelques idées d'estimation non-paramétrique dans le dernier chapitre du cours. 
+**Inférence paramétrique.** La plupart des expériences/modèles statistiques que nous rencontrerons dans ce cours, seront de nature dite *paramétrique*, autrement dit indexés par des parties de $\mathbb{R}^d$. Le mot "paramètre" est en lui-même trompeur : on parle souvent de paramètre d'une distribution pour désigner ce qui devrait plutôt s'appeler une fonctionnelle. Par exemple, la moyenne, la covariance  d'une   distribution sur $\mathbb{R}^d$ sont des paramètres de cette distribution. Les quantiles, l'asymétrie, la kurtosis sont d'autres paramètres.
+
+**Statistique non paramétrique.** Tous les modèles ne sont pas paramétriques au sens ci-dessus : dans de nombreux développements des statistiques, par exemple en estimation de densité, on travaille sur des modèles plus riches qui n'admettent pas de paramétrisation naturelle par une partie d'un espace euclidien de dimension finie. C'est ce qu'on appelle l' *estimation non-paramétrique*. Nous y reviendrons au dernier chapitre. 
 
 
+**Statistique bayésienne.** En statistique paramétrique, les paramètres $\theta$ déterminent le hasard qui génère les observations $x_i$. La statistique bayésienne consiste à renverser le point de vue, et à rendre le paramètre $\theta$ lui-même aléatoire ; sa loi, appelée *prior*, mesure "le degré de connaissance a priori" qu'on en a. La règle de Bayes explique comment cette loi est modifiée par les observations. C'est un point de vue qui ne sera pas abordé dans ce cours. 
